--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "axios": "^0.18.0",
     "material-ui": "^0.20.2",
     "react": "^16.7.0",
+    "react-countdown-clock": "^2.5.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-js-pagination": "^3.0.2",
     "react-redux-toastr": "^7.4.7",
     "react-scripts": "2.1.3",
     "redux-form": "^8.1.0",
