--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-countdown-clock": "^2.5.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
+    "react-icons-kit": "^1.2.1",
     "react-js-pagination": "^3.0.2",
     "react-redux-toastr": "^7.4.7",
     "react-scripts": "2.1.3",
