--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-js-pagination": "^3.0.2",
     "react-redux-toastr": "^7.4.7",
     "react-scripts": "2.1.3",
+    "react-spinners": "^0.5.1",
     "redux-form": "^8.1.0",
     "redux-form-material-ui": "^4.2.0",
     "styled-components": "^2.2.2"
